--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -928,18 +928,14 @@ body {
     display: flex;
     width: 100%;
     flex-direction: column;
-}
-
-.flex-table {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
+    line-height: 2rem;
 }
 
 .flex-column {
     width: 100%;
     display: flex;
     flex-direction: column;
+    line-height: 2rem;
 }
 
 .flex-column-wrap {
@@ -952,7 +948,14 @@ body {
     width: 100%;
     display: flex;
 }
-
+.subtotal-proyect{
+    background-color: #b2b5f9 !important;
+    color: @color-white;
+    font-weight: 800;
+    // opacity: .8;
+    // background: rgb(249, 249, 249);
+    //     background: linear-gradient(90deg, rgba(249, 249, 249, 1) 0%, rgba(112, 118, 254, 1) 100%, rgba(112, 118, 254, 1) 100%);
+}
 .flex-row:nth-child(odd) {
     background-color: #F8F8F8;
 }
