--- a/app/src/js/app/components/Apps/catalogs/hosting/views/hostingFormView.html
+++ b/app/src/js/app/components/Apps/catalogs/hosting/views/hostingFormView.html
@@ -215,7 +215,7 @@
               <td>{{contact.email}}</td>
               <td>{{contact.phone}}</td>
               <td>{{contact.type.name}}</td>
-              <td><a href="javascript:void(0);" ng-click="hosting.contact.splice($index,1);"><img src="assets/images/icons/delete_entry-ico.svg"></a></td>
+              <td><a href="javascript:void(0);" ng-click="hosting.contact.splice($index,1);"><i class="ri-close-line"></i></a></td>
             </tr>
           </tbody>
         </table>
@@ -489,7 +489,7 @@
                 </a>
               </td>
               <td>
-                <a href="javascript:void(0);" ng-click="hosting.products.splice($index,1);discountPrice();"><img src="assets/images/icons/delete_entry-ico.svg"></a>
+                <a href="javascript:void(0);" ng-click="hosting.products.splice($index,1);discountPrice();"><i class="ri-close-line"></i></a>
               </td>
             </tr>
           </tbody>
