--- a/app/src/js/app/components/calendar/views/definirHorarioFijo.modal.html
+++ b/app/src/js/app/components/calendar/views/definirHorarioFijo.modal.html
@@ -44,7 +44,7 @@
                             <td title='{{h.name}}'>{{h.name}}</td>
                             <td title='{{h.desde}}{{h.hasta}}'>{{h.desde}}-{{h.hasta}}</td>
                             <td> <a class="close" ng-click="eliminarRegistro(index)">
-                                    <img src="assets/images/icons/delete_entry-ico.svg"></i></a></td>
+                                    <i class="ri-close-line"></i></i></a></td>
                         </tr>
                     </tbody>
                 </table>
