--- a/app/src/js/app/components/projects/views/projectFormView.html
+++ b/app/src/js/app/components/projects/views/projectFormView.html
@@ -156,7 +156,7 @@
                         </td>
                         <td>
                           <a ng-click="deleteTask($index,task.id)" ng-if="userRole=='admin'">
-                            <img src="assets/images/icons/delete_entry-ico.svg">
+                            <i class="ri-close-line"></i>
                           </a>
                         </td>
                         <td></td>
