--- a/app/src/js/app/components/tasks/tasks/views/taskEditFormView.html
+++ b/app/src/js/app/components/tasks/tasks/views/taskEditFormView.html
@@ -117,7 +117,7 @@
                 </td>
                 <td>
                   <a ng-click="deleteComment(index)" ng-if="userRole=='admin'">
-                    <img src="assets/images/icons/delete_entry-ico.svg">
+                    <i class="ri-close-line"></i>
                   </a>
                 </td>
               </tr>
