--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -102,7 +102,7 @@
       </div>
       <!-- ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false" -->
       <div class="top-bar__current_tracking_container tooltip-container">
-        <span ng-show="showTrackTooltip" class="tooltip-box" ng-mouseleave="showTrackTooltip = false" >
+        <span ng-show="showTrackTooltip" class="tooltip-box" ng-mouseleave="showTrackTooltip = false; " >
           Ahora trackear es mas sencillo<br>
           Solo busca la tarea y dale play!
         </span>
