--- a/app/src/less/components/alert.less
+++ b/app/src/less/components/alert.less
@@ -94,9 +94,9 @@
     border-radius: 3px 3px 3px 3px;
     background-position: 15px center;
     background-repeat: no-repeat;
-    -moz-box-shadow: 0 0 12px #999999;
-    -webkit-box-shadow: 0 0 12px #999999;
-    box-shadow: 0 0 12px #999999;
+    // -moz-box-shadow: 0 0 12px #999999;
+    // -webkit-box-shadow: 0 0 12px #999999;
+    // box-shadow: 0 0 12px #999999;
     color: #FFFFFF;
     opacity: 0.9;
   }
@@ -133,7 +133,7 @@
     background-color: #181818;
   }
   .toast-success {
-    background-color: #4AD6A0;
+    background-color: #06BA63;
       // background-color: #181818;
       // background-color: #195ABD;
     // background-color: #51A351;
