--- a/app/src/less/components/tabs.less
+++ b/app/src/less/components/tabs.less
@@ -13,7 +13,7 @@
   padding: .2rem 1rem;
   //.box-shadow(inset 0px -1px 0px 0px rgba(0,0,0,0.10));
   font-size: .75rem;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   background-color: @color-light-gray;
   transition: color .15s ease-in, background-color .15s ease-in;
   font-weight: bold;
