--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -15,7 +15,7 @@
     height: 100vh;
     overflow: hidden;
     position: fixed;
-    padding-bottom: 120px;
+    // padding-bottom: 120px;
 
     &:after {
       content: "";
