--- a/app/src/less/session-blk.less
+++ b/app/src/less/session-blk.less
@@ -8,7 +8,7 @@
   background: rgba(255,255,255,0.95);
   .box-shadow(0px 2px 4px 0px rgba(0,0,0,0.20));
   width: 70%;
-  margin: 30% auto !important;
+  margin: 25vh 5% !important;
   border-radius: 5px;
 
 }
