[fix_task_back] fix_task_back

--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloFormView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloFormView.html
@@ -9,11 +9,11 @@
     </div>
 </div>
 
-<div>
-    <button style="float: right;background-color: steelblue; color: white; cursor: pointer;cursor: pointer;"
+<div style="float: right;">
+    <button class="lexart-btn"
         ng-click="tutorial()">¿Como agregar un estado de tarea a Trello?</button>
     <button
-        style="float: right;background-color: steelblue; color: white; cursor: pointer;cursor: pointer;margin-right: 10px;"
+        class="lexart-btn"
         ng-click="tutorialBot()">¿Como agregar lexart.brain al tablero de Trello?</button>
 </div>
 <a style="text-align: left; margin-left: 3px; color: blue; text-decoration: underline;" target="_blank"
