--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
@@ -8,10 +8,10 @@
         </div>
     </div>
      <div class="lexart-btn__right">
-        <button style="background-color: steelblue; color: white; cursor: pointer;" ng-click="addBoard()">Agregar Tablero</button>
+        <button class="lexart-btn" ng-click="addBoard()">Agregar Tablero</button>
     </div>
 </div>
-<div style="text-align: center; background-color: steelblue; font-weight: bold; color:white; margin-bottom: 10px;">Para capturar tableros necesita agregar dentro de su tablero de Trello a lexart.brain. <a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline;"> Ver paso a paso</a></div>
+<div class="lexart_select_conatiner_proyect" style="text-align: center;">Para capturar tableros necesita agregar dentro de su tablero de Trello a lexart.brain. <a href='javascript:void(0)' ng-click="tutorialBot()" style="text-decoration: underline;"> Ver paso a paso</a></div>
 <div class="lexart-wa__cnt">
     <table class="lexart-table">
         <thead>
