--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -116,7 +116,9 @@
             </label>
           </div>
           <div class="lexart-frm__fld">
-            <button class="lexart-btn" ng-click="filterYear(date.year)">{{ 'reports.search' | translate }}</button>
+            <div class="lexart-frm__lbl">
+              <button class="lexart-btn" ng-click="filterYear(date.year)">{{ 'reports.search' | translate }}</button>
+            </div>
           </div>
           <div class="lexart-frm__fld">
           </div>
