--- a/app/src/less/top-bar.less
+++ b/app/src/less/top-bar.less
@@ -234,7 +234,7 @@ a {
           white-space: nowrap;
           box-shadow: @navbar-dropdown-shadow;
           z-index: 99999;
-          border-radius: @navbar-dropdown-radius;
+          border-radius: 5px;
           display: none;
 
           @media (max-width: 768px) {
